--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,13 +19,20 @@ jobs:
             - name: Setup Node.js
               uses: actions/setup-node@v3
               with:
-                  node-version: 16
+                  node-version: 22
             
             - name: Install dependencies
               run: npm install
             
             - name: Build project
               run: npm run build
+
+            - name: Verify build directory
+              run: |
+                if [ ! -d "build" ]; then
+                  echo "Build directory not found!"
+                  exit 1
+                fi
 
             - name: Deploy to GitHub Pages
               uses: JamesIves/github-pages-deploy-action@v4
