--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,7 +19,7 @@ jobs:
             - name: Setup Node.js
               uses: actions/setup-node@v3
               with:
-                  node-version: 22
+                  node-version: 21
             
             - name: Install dependencies
               run: npm install
@@ -27,8 +27,7 @@ jobs:
             - name: Build project
               run: npm run build
 
-            - name: Deploy to GitHub Pages
+            - name: Deploy 🚀
               uses: JamesIves/github-pages-deploy-action@v4
               with:
-                branch: gh-pages
-                folder: build
+                folder: build 
