--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,9 +25,13 @@ jobs:
               run: npm install
             
             - name: Build project
-              run: npm run build
+              run: cd github_actions && npm run build
 
             - name: Deploy 🚀
               uses: JamesIves/github-pages-deploy-action@v4
               with:
-                folder: build 
+                folder: github_actions/build 
+
+            - name: List files (debug)
+              run: ls -la
+              
