--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://dev-aditya-lab.github.io/github-workflows-/",
   "scripts": {
     "dev": "vite",
     "lint": "eslint .",
